# aoc_2019

./: Cargo.toml  README.md
examples/: pico_args.rs
src/: aoc_result.rs  args.rs  day_01.rs  error.rs  exercises.rs  helpers.rs  lib.rs  main.rs  option_ext.rs  unit_tests.rs
src/consts/msg/: en_us.rs
src/day_01/: part_1.rs  part_2.rs
src/day_01/part_1/: unit_tests.rs
src/error/: io_error.rs
src/exercises/: day_01.rs  day_02.rs
src/exercises/day_01/: helpers.rs  part_1.rs  part_2.rs
src/exercises/day_01/part_1/: unit_tests.rs
src/exercises/day_01/part_2/: unit_tests.rs
src/exercises/day_01/unit_tests/: part_1.rs  part_2.rs
src/exercises/day_02/: op_code.rs  part_1.rs
src/exercises/day_02/unit_tests/: part_1.rs
src/unit_tests/: aoc.rs  day_01.rs
